Issue #9350: fix GimpMenu separator lines being randomly thick (other case).
The previous commit did fix one such reason (multiple separators next to each
other), but I realized there is one other case where single separators are just
too big: when the menu is embedded in a GtkHeaderBar, each separator would have
a weird margin of several pixels (at least in my case, probably taken from the
underlying system theme). And worse, this margin was using another background
color.

So anyway this CSS rules takes care of not adding weird margins to menu
separators.

--- a/themes/Default/common.css
+++ b/themes/Default/common.css
@@ -406,6 +406,13 @@ menu box {
   background-color: transparent;
 }
 
+/* In some cases, the GtkSeparatorMenuItem-s get very ugly top/bottom margin
+ * with a different background color. Let's get rid of it.
+ */
+menu separator {
+  margin: 0;
+}
+
 /* Sidebar in File > Open */
 
 /* The background to either side of the directory buttons.
